# meson-demo

./: .gitignore  README.md  README.org  print_elijah
code2/: .gitignore  Justfile  Makefile  main.c  meson.build
code2/Prelude/: Prelude.c  Prelude.h  meson.build
code2/listfolders3/: Main.c  Main.h  meson.build
code2/listfolders3/wpkotlin_c.demo.list_folders/: MainLogic.c  MainLogic.h  __MODULE__.c  __MODULE__.h
code2/stdlib/std.collections/: List_111.c  List_111.h  List_112.c  List_112.h
code2/stdlib/std.io/: Directory.c  Directory.h
